--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Setup
         run: |
-          echo "${{ secrets.CONF }}" > rclone.conf
+          wget "${{ secrets.CONF }}"
           chmod +x setup.sh
           ./setup.sh
 
@@ -43,7 +43,7 @@ jobs:
           
       - name: Setup
         run: |
-          echo "${{ secrets.CONF }}" > rclone.conf
+          wget "${{ secrets.CONF }}"
           chmod +x setup.sh
           ./setup.sh
 
