--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   xps:
     name: 2k7
     permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 300
     env:
       CONF: ${{ secrets.CONF }}
@@ -32,7 +32,7 @@ jobs:
   ielts:
     name: IELTS
     permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     timeout-minutes: 300
     env:
       CONF: ${{ secrets.CONF }}
