--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
   xps:
     name: 2k7
     permissions: write-all
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     env:
       CONF: ${{ secrets.CONF }}
 
@@ -31,7 +31,7 @@ jobs:
   ielts:
     name: IELTS
     permissions: write-all
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     env:
       CONF: ${{ secrets.CONF }}
 
@@ -58,11 +58,3 @@ jobs:
       - name: Transfering...
         run: |
           rclone copy edrive: onedrive:IELTS --ignore-existing
-          
-      - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: 0
-          keep_minimum_runs: 1
