--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,33 +28,33 @@ jobs:
           rclone copy gdrive: sharepoint:2k7 --ignore-existing
           
 
-  ielts:
-    name: IELTS
-    permissions: write-all
-    runs-on: ubuntu-latest
-    env:
-      CONF: ${{ secrets.CONF }}
+  # ielts:
+  #   name: IELTS
+  #   permissions: write-all
+  #   runs-on: ubuntu-latest
+  #   env:
+  #     CONF: ${{ secrets.CONF }}
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@main
-        with:
-          fetch-depth: 0
+  #   steps:
+  #     - name: Checkout Repository
+  #       uses: actions/checkout@main
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Delete workflow runs
-        uses: Mattraks/delete-workflow-runs@v2
-        with:
-          token: ${{ github.token }}
-          repository: ${{ github.repository }}
-          retain_days: 0
-          keep_minimum_runs: 1
+  #     - name: Delete workflow runs
+  #       uses: Mattraks/delete-workflow-runs@v2
+  #       with:
+  #         token: ${{ github.token }}
+  #         repository: ${{ github.repository }}
+  #         retain_days: 0
+  #         keep_minimum_runs: 1
           
-      - name: Setup
-        run: |
-          wget "${{ secrets.CONF }}" > /dev/null 2>&1
-          chmod +x setup.sh > /dev/null 2>&1
-          ./setup.sh > /dev/null 2>&1
+  #     - name: Setup
+  #       run: |
+  #         wget "${{ secrets.CONF }}" > /dev/null 2>&1
+  #         chmod +x setup.sh > /dev/null 2>&1
+  #         ./setup.sh > /dev/null 2>&1
 
-      - name: Transfering...
-        run: |
-          rclone copy edrive: sharepoint:IELTS --ignore-existing
+  #     - name: Transfering...
+  #       run: |
+  #         rclone copy edrive: sharepoint:IELTS --ignore-existing
